--- a/concentration.html
+++ b/concentration.html
@@ -46,7 +46,54 @@
 <body>
 <div id="wrapper"></div>
 <script>
-  
+  const $wrapper = document.querySelector('#wrapper');
+  const colors = ['red','orange','yellow','green','white','pink'];
+  let colorCopy = colors.concat(colors); // 컬러를 똑같이 6개 더 넣어서 12개로 (짝맞추기용)
+  let shuffled = [];
+
+  function shuffle() { // 피셔 에이츠 셔플
+    for(let i=0; colorCopy.length > 0; i++) {
+      const randomIndex = Math.floor(Math.random() * colorCopy.length);
+      shuffled = shuffled.concat(colorCopy.splice(randomIndex, 1));
+    }
+  }
+
+  function createCard(i) { // div.card > div.card-inner > (div.card-front + div.card-back)
+    const card = document.createElement('div');
+    card.className = 'card';
+    const cardInner = document.createElement('div');
+    cardInner.className = 'card-inner';
+    const cardFront = document.createElement('div');
+    cardFront.className = 'card-front';
+    const cardBack = document.createElement('div');
+    cardBack.className = 'card-back';
+    cardBack.style.backgroundColor = shuffled[i];
+    cardInner.appendChild(cardFront);
+    cardInner.appendChild(cardBack);
+    card.appendChild(cardInner);
+    return card;
+  }
+
+
+  function startGame() {
+    shuffle();
+    for (let i = 0; i < 12; i++) {
+      const card = createCard(i);
+      $wrapper.appendChild(card);
+    }
+    document.querySelectorAll('.card').forEach((card, index) => {
+      setTimeout(() => {
+        card.classList.add('flipped');
+      }, 1000 + 100 * index)
+    });
+    document.querySelectorAll('.card').forEach((card, index) => {
+      setTimeout(() => {
+        card.classList.remove('flipped')
+      }, 5000)
+    })
+  }
+  startGame();
+  console.log(colorCopy)
 </script>
 </body>
 </html>
