--- a/concentration.html
+++ b/concentration.html
@@ -101,8 +101,7 @@
       }
       alert('축하합니다! 모든 짝을 맞췄습니다!');
       endTime = new Date;
-      const time = endTime - startTime
-      console.log(`${time}ms`)
+      console.log(`${endTime - startTime / 1000}초 걸렸습니다.`)
       return;
     }
     if (firstClickedColor !== secondClickedColor) {
